--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p>5K</p>
                 <P>Projetos Completos</P>
               </div>
-              <a href="">Conato</a>
+              <a href="">Contato</a>
             </div>
              
           <div>
